--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
 dependencies {
     // Зависимости тестирования
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 
     // Дополнительные зависимости
     compileOnly 'org.projectlombok:lombok'
@@ -36,7 +36,7 @@ dependencies {
     implementation 'org.springframework.data:spring-data-couchbase:5.0.1'
 
     // Зависимости безопасности
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
