--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,12 +18,7 @@ server:
 logging:
   level:
     org:
-      hibernate:
-        sql: DEBUG
-        type:
-          descriptor:
-            sql:
-              org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-      springframework: INFO
+      springframework:
+        security: DEBUG
 
 debug: false
