--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 /src/main/resources/log
+images/partners
+images/teachers
+images/partners/**
+images/teachers/**
 
 
 ### STS ###
