--- a/src/main/resources/database.yaml
+++ b/src/main/resources/database.yaml
@@ -1,5 +1,5 @@
 database:
-  username: Administrator
-  password: rootroot
+  username:
+  password:
   bucket-name: IVT-Bucket
   connection-string: couchbase://127.0.0.1
