--- a/src/main/resources/security.yaml
+++ b/src/main/resources/security.yaml
@@ -1,12 +1,12 @@
 security:
   token:
     jwt:
-      access: There_should_be_a_super_secret_word_here_for_the_access_token,_but_I_can't_think_of_one.
-      refresh: There_should_be_a_super_secret_word_here_for_the_refresh_token,_but_I_can't_think_of_it.
-      disposable: There_should_be_a_super_secret_word_here_for_the_one_time_token_token,_but_I_can't_think_it.
+      access:
+      refresh:
+      disposable:
       valid-time-access-second: 1800
       valid-time-refresh-second: 604800
       valid-time-disposable-second: 3600
       header-access-token: Authorization
-      header-refresh-token: RefreshToken
+      cookie-refresh-token: RefreshToken
       bearer: Bearer_
