--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,23 +4,18 @@ spring:
       enabled: always
   servlet:
     multipart:
-      max-file-size: 50MB
-      max-request-size: 50MB
+      max-file-size: 5MB
+      max-request-size: 5MB
   main:
     allow-bean-definition-overriding: true
-    banner-mode: console
+    banner-mode: off
   config:
     import: config/security.yaml,config/database.yaml,config/setting-email.yaml
-    resources:
-      cache:
-        cachecontrol:
-          max-age: 180d
 
 server:
   shutdown: graceful
   servlet:
     context-path: /api/v1
-
 
 upload:
   path:
